# Computer-Graphics

./: .gitignore  README.md  backup.bat
learn/OpenGL/: CMakeLists.txt
learn/OpenGL/LearnOpenGL/: .clang-format  CMakeLists.txt  README.md  第一章.md
learn/OpenGL/LearnOpenGL/assets/: test.mtl
learn/OpenGL/LearnOpenGL/include/: camera.h  camera_fps.h  common.h  imconfig.h  mesh.h  model.h  shader.h  shader_s.h
learn/OpenGL/LearnOpenGL/lib/: stb_image.cpp
learn/OpenGL/LearnOpenGL/shader/14.basicLighting/: 1.colors.vert
learn/OpenGL/LearnOpenGL/shader/15.basic_lighting_exercise3/: 1.colors.frag
learn/OpenGL/LearnOpenGL/src/: CMakeLists.txt
learn/OpenGL/LearnOpenGL/test/: CMakeLists.txt  test.cpp
learn/OpenGL/OpenGLProgrammingGuide/src/: CMakeLists.txt
learn/OpenGL/OpenGlWithTheCherno/: CMakeLists.txt
learn/OpenGL/OpenGlWithTheCherno/include/: IndexBuffer.h  Renderer.h  Shader.h  Test.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
learn/OpenGL/OpenGlWithTheCherno/shader/: Basic.shader
learn/OpenGL/OpenGlWithTheCherno/src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Test.cpp  TestClearColor.cpp  TestTexture2D.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  stb_image.cpp
learn/OpenGL/OpenGlWithTheCherno/test/: main.cpp
learn/OpenGL/PPT/LearnOpenGL4Advanced/: 10.高级GLSL.pptx  11.几何着色器.pptx  12.实例化.pptx  13.抗锯齿.pptx  1：深度测试.pptx  2：鼠标拾取.pptx  3：模型控制.pptx  4：模板测试.pptx  5：混合.pptx  6：面剔除 .pptx  7：帧缓冲.pptx  8.立方体贴图.pptx  9.高级数据.pptx
learn/OpenGL/PPT/LearnOpenGL5AdvancedLighting/: 1.Blinn-Phong.pptx  2.Gamma校正.pptx  4.法线贴图.pptx  5.视差贴图.pptx  6.HDR.pptx  7.泛光.pptx  8.延迟着色.pptx  9.屏幕空间环境光遮蔽.pptx
learn/OpenGL/PPT/LearnOpenGL6PBR/: 1.PBR.pptx  2.IBL.pptx
learn/OpenGL/PPT/LearnOpenGL：1入门篇/: 2、画个三角.pptx  3、着色器.pptx  4、纹理.pptx  5、变换.pptx
learn/OpenGL/PPT/LearnOpenGL：2基础光照/: 1：颜色与光照场景创建.pptx  2：基础光照.pptx  3：材质.pptx  4：光照贴图.pptx  5：投光物(Light Caster).pptx  6：多光源.pptx
learn/OpenGL/PPT/LearnOpenGL：3Model/: 1：Assimp.pptx  2：Mesh.pptx  3：Model.pptx
learn/OpenGL/axibai/: CMakeLists.txt
learn/OpenGL/axibai/LearnOpenGL：入门篇/: 1、准备工作.pptx  4、纹理.pptx  7、摄像机.pptx
learn/OpenGL/axibai/include/: camera_fps.h  model.h  shader.h
learn/OpenGL/axibai/lib/: stb_image.cpp
learn/OpenGL/axibai/sample_1_1HelloWindow/: main.cpp  sample_1_1HelloWindow.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle/: main.cpp  sample_1_2HelloTriangle.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle2/: main.cpp  sample_1_2HelloTriangle2.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle3/: main.cpp  sample_1_2HelloTriangle3.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle_exercise1/: main.cpp  sample_1_2HelloTriangle_exercise1.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle_exercise2/: main.cpp  sample_1_2HelloTriangle_exercise2.vcxproj
learn/OpenGL/axibai/sample_1_2HelloTriangle_exercise3/: main.cpp  sample_1_2HelloTriangle_exercise3.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders/: main.cpp  sample_1_3Shaders.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders2/: main.cpp  sample_1_3Shaders2.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders3/: main.cpp  sample_1_3Shaders3.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders3_exercise1/: main.cpp  sample_1_3Shaders3_exercise1.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders3_exercise2/: main.cpp  sample_1_3Shaders3_exercise2.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders3_exercise3/: main.cpp  sample_1_3Shaders3_exercise3.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders3_exercise4/: main.cpp  sample_1_3Shaders3_exercise4.vcxproj
learn/OpenGL/axibai/sample_1_3Shaders4/: sample_1_3Shaders4.vcxproj
learn/OpenGL/axibai/sample_1_4Texture/: main.cpp  sample_1_4Texture.vcxproj
learn/OpenGL/axibai/sample_1_4Texture2/: main.cpp  sample_1_4Texture2.vcxproj
learn/OpenGL/axibai/sample_1_4Texture3/: main.cpp  sample_1_4Texture3.vcxproj
learn/OpenGL/axibai/sample_1_4Texture4/: sample_1_4Texture4.vcxproj
learn/OpenGL/axibai/sample_1_4Texture_exercise1/: main.cpp  sample_1_4Texture_exercise1.vcxproj
learn/OpenGL/axibai/sample_1_4Texture_exercise2/: main.cpp  sample_1_4Texture_exercise2.vcxproj
learn/OpenGL/axibai/sample_1_4Texture_exercise3/: main.cpp  sample_1_4Texture_exercise3.vcxproj
learn/OpenGL/axibai/sample_1_4Texture_exercise4/: main.cpp  sample_1_4Texture_exercise4.vcxproj
learn/OpenGL/axibai/sample_1_5Transformations/: main.cpp  sample_1_5Transformations.vcxproj
learn/OpenGL/axibai/src/: CMakeLists.txt
learn/OpenGL/include/: shader_s.h
learn/OpenGL/src/: main.cpp
learn/OpenGL/src/5.advanced_lighting/: CMakeLists.txt
learn/OpenGL/src/6.pbr/: CMakeLists.txt
learn/OpenGL/test/: CMakeLists.txt  test.cpp
learn/OpenGL/test/src/: CMakeLists.txt  gl3w.c  glfw_test.c  main.cpp
learn/cpp/: .clang-format  CMakeLists.txt  Complex.cpp  README.md
learn/cpp/.VSCodeCounter/2023-06-18_19-35-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
learn/cpp/.VSCodeCounter/2023-06-18_19-45-00/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
learn/cpp/.VSCodeCounter/2023-06-19_17-51-38/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
learn/cpp/include/: TreeNode.h  test.h
learn/cpp/lib/: boost.lib  fmtd.lib
learn/cpp/src/: CMakeLists.txt  thread.cpp
learn/cpp/src/new/: CMakeLists.txt  test.cpp
learn/cpp/src/opecv/: CMakeLists.txt  test.cpp
learn/cpp/src/search/: a_start.cpp  cnn.cpp  max_polling.cpp
learn/cpp/src/singleton_pattern/: CMakeLists.txt  main.cpp
learn/cpp/src/test/: CMakeLists.txt  test.cpp  test1.cpp
learn/cpp/src/test1/: CMakeLists.txt  main.cpp  test1.cpp
learn/cpp/src/test2/: CMakeLists.txt  main.cpp  test.cpp
learn/cpp/src/test3/: CMakeLists.txt  main.cpp
learn/cpp/src/test4/: CMakeLists.txt  main.cpp
learn/cpp/src/test5/: CMakeLists.txt  main.cpp
learn/cpp/src/vec2_test/: CMakeLists.txt  vec2.cpp  vec2.h
learn/test/: CMakeLists.txt
(+2677 files in other folders)
