add_subdirectory(1.advanced_lighting)
add_subdirectory(2.gamma_correction)
add_subdirectory(3.1.1.shadow_mapping_depth)
add_subdirectory(3.1.2.shadow_mapping_base)
add_subdirectory(3.1.3.shadow_mapping)
add_subdirectory(3.2.1.point_shadows)
add_subdirectory(3.2.2.point_shadows_soft)
add_subdirectory(3.3.csm)
add_subdirectory(4.normal_mapping)
add_subdirectory(5.1.parallax_mapping)
add_subdirectory(5.2.steep_parallax_mapping)
add_subdirectory(5.3.parallax_occlusion_mapping)
add_subdirectory(6.hdr)
add_subdirectory(7.bloom)
add_subdirectory(8.1.deferred_shading)
add_subdirectory(8.2.deferred_shading_volumes)
add_subdirectory(9.ssao)
