add_subdirectory(1.colors)
add_subdirectory(2.1.basic_lighting_diffuse)
add_subdirectory(2.2.basic_lighting_specular)
add_subdirectory(2.3.basic_lighting_exercise1)
add_subdirectory(2.4.basic_lighting_exercise2)
add_subdirectory(2.5.basic_lighting_exercise3)
add_subdirectory(3.1.materials)
add_subdirectory(3.2.materials_exercise1)
add_subdirectory(4.1.lighting_maps_diffuse_map)
add_subdirectory(4.2.lighting_maps_specular_map)
add_subdirectory(4.3.lighting_maps_exercise2)
add_subdirectory(4.4.lighting_maps_exercise4)
add_subdirectory(5.1.light_casters_directional)
add_subdirectory(5.2.light_casters_point)
add_subdirectory(5.3.light_casters_spot)
add_subdirectory(5.4.light_casters_spot_soft)
add_subdirectory(6.multiple_lights)
add_subdirectory(6.multiple_lights_exercise1)
