add_subdirectory(1.1.depth_testing)
add_subdirectory(1.2.depth_testing_view)
add_subdirectory(10.1.instancing_quads)
add_subdirectory(10.2.asteroids)
add_subdirectory(10.3.asteroids_instanced)
add_subdirectory(11.1.anti_aliasing_msaa)
add_subdirectory(11.2.anti_aliasing_offscreen)
add_subdirectory(2.stencil_testing)
add_subdirectory(3.1.blending_discard)
add_subdirectory(3.2.blending_sort)
add_subdirectory(4.face_culling_exercise1)
add_subdirectory(5.1.framebuffers)
add_subdirectory(5.2.framebuffers_exercise1)
add_subdirectory(6.1.cubemaps_skybox)
add_subdirectory(6.2.cubemaps_environment_mapping)
add_subdirectory(8.advanced_glsl_ubo)
add_subdirectory(9.1.geometry_shader_houses)
add_subdirectory(9.2.geometry_shader_exploding)
add_subdirectory(9.3.geometry_shader_normals)
